--- a/www/templates/currency/items_parameters.html
+++ b/www/templates/currency/items_parameters.html
@@ -142,4 +142,10 @@
     </label>
   </div>
 
+   <ion-item class="item-icon-left">
+     <i class="icon ion-steam"></i>
+     <span translate>CURRENCY.VIEW.STEP_MAX</span>
+     <span class="badge badge-stable">{{stepMax}}</span>
+   </ion-item>
+
 </div>
